--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "webpack-merge": "^5.7.3"
   },
   "dependencies": {
+    "airtable": "^0.11.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
