--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "dependencies": {
     "airtable": "^0.11.6",
+    "autoprefixer": "10.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
